# noaa-data-pipeline

./: .gitignore  Cargo.toml  LICENSE  README.md  download_release.sh
.github/workflows/: build-setup.yml  deploy.yaml  install_duckdb.yml  release.yml
assets/: index.html  main.js
crates/daemon/: Cargo.toml  Settings.toml
crates/daemon/src/: lib.rs  parquet_handler.rs
crates/daemon/src/domains/forecasts/: download_forecast.rs
crates/oracle/: Cargo.toml  Settings.toml  build.sh
crates/oracle/src/: file_access.rs  lib.rs  main.rs  nostr_extractor.rs  oracle.rs  startup.rs  utils.rs
crates/oracle/src/db/: event_data.rs  event_db_migrations.rs  mod.rs  outcome_generator.rs  weather_data.rs
crates/oracle/src/routes/events/: oracle_routes.rs
crates/oracle/src/routes/files/: download.rs
crates/oracle/src/routes/stations/: weather_routes.rs
crates/oracle/tests/api/: create_event.rs  create_event_entry.rs  etl_workflow.rs  get_events.rs  helpers.rs  main.rs
crates/oracle/ui/: README.md  index.html  main.js
daemon/: Cargo.toml  README.md  Settings.toml
daemon/src/: coordinates.rs  lib.rs  main.rs  parquet_handler.rs  utils.rs  weather_data.rs
daemon/src/domains/: mod.rs
daemon/src/domains/forecasts/: download_forecast.rs  mod.rs  parquet_file_generator_forecast.rs  xml.rs  xml_forecast.rs
daemon/src/domains/observations/: download_observations.rs  mod.rs  parquet_file_generator_observations.rs  xml_observation.rs
daemon/src/models/: forecast.rs  mod.rs  observation.rs  station.rs  zone.rs
daemon/src/models/noaa/: forecast.rs  mod.rs  observation.rs  station.rs  zone.rs
daemon/src/models/parquet/: forecast.rs  mod.rs  observation.rs  stations.rs
daemon/src/static_data/: forecast_gridpoints.json
data/: stations_2023-10-12 4:03:56.281876185 +00:00:00.parquet  stations_2023-10-27 4:11:17.350416246 +00:00:00.parquet
data_orcale/: Cargo.toml  Settings.toml
data_orcale/src/: main.rs  startup.rs  utils.rs
data_orcale/src/routes/files/: get_names.rs  mod.rs
data_orcale/ui/: main.js
oracle/: Cargo.toml  README.md  Settings.toml
oracle/src/: app_error.rs  config.rs  db.rs  file_access.rs  lib.rs  main.rs  oracle.rs  startup.rs  utils.rs
oracle/src/db/: event_data.rs  event_db_migrations.rs  mod.rs  outcome_generator.rs  weather_data.rs
oracle/src/domains/oracle/: mod.rs  service.rs  store.rs
oracle/src/routes/: mod.rs
oracle/src/routes/events/: mod.rs  oracle_routes.rs  routes.rs
oracle/src/routes/files/: download.rs  get_names.rs  mod.rs  post.rs  upload.rs
oracle/src/routes/metrics/: health_check.rs
oracle/src/routes/oracle/: create_event.rs  get_event.rs  get_events.rs  get_pubkey.rs  mod.rs  sign_event.rs
oracle/src/routes/stations/: get_stations.rs  mod.rs  observations.rs  weather_routes.rs
oracle/src/ser/: mod.rs  utc_datetime.rs  utc_option_datetime.rs
oracle/src/utils/: file_utils.rs  mod.rs
oracle/tests/api/: create_event.rs  create_event_entry.rs  etl_workflow.rs  get_events.rs  helpers.rs
parquet_file_service/: Cargo.toml  README.md  Settings.toml  build.sh
parquet_file_service/assets/: index.html  main.js
parquet_file_service/src/: lib.rs  main.rs  startup.rs  utils.rs
parquet_file_service/src/routes/: mod.rs
parquet_file_service/src/routes/files/: get.rs  get_names.rs  mod.rs  post.rs
parquet_file_service/src/routes/home/: get.rs
parquet_file_service/src/routes/stations/: forecasts.rs
parquet_file_service/ui/: main.js
src/: main.rs
static_data/: station_coordinates.json  station_gridpoints.json  station_observations.json
ui/: README.md  index.html  main.js
