# [PROJECT_DIR]/Cargo.toml
[workspace]
resolver = "2"
members = ["daemon", "parquet_file_service"]

[workspace.dependencies]
anyhow = "1.0.75"
parquet = "50.0.0"
log = "0.4.18"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
clap = { version = "4.3.23", features = ["derive", "env"] }
reqwest = {version = "0.11.22", features=["stream"]}
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.9"
time = "0.3.31"
openssl = { version = "0.10", features = ["vendored"] }
config = "0.13.1"