[package]
name = "daemon"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
parquet = "47.0.0"
log = "0.4.18"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
clap = { version = "4.3.23", features = ["derive", "env"] }
reqwest = {version = "0.11.22", features=["stream", "json"]}
serde = { version="1.0.188", features= ["derive"]}
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.9"
xml-rs = "0.8.19"
serde_json = "1.0.107"
async-throttle = "0.3.2"
futures = "0.3.28"
parquet_derive = "47.0.0"
