[package]
name = "daemon"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
parquet = "47.0.0"
log = "0.4.18"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
clap = { version = "4.3.23", features = ["derive", "env"] }
reqwest = { version = "0.11.22", features = ["stream","multipart", "json"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full", "signal"] }
tokio-util = { version = "0.7.10",features = ["codec"] }
serde_json = "1.0.107"
async-throttle = "0.3.2"
futures = "0.3.28"
arrow = "47.0.0"
parquet_derive = "47.0.0"
time = { version = "0.3.29", features = ["parsing"] }
reqwest-retry = "0.3.0"
reqwest-middleware = "0.2.3"
serde-xml-rs = "0.6.0"
zip = "0.6.6"
tempfile = "3.9.0"
regex = "1.10.2"
openssl = { version = "0.10", features = ["vendored"] }
toml = "0.5.10"
rustix = "0.38.19"
h2 = "0.3.24"