[package]
name = "daemon"
version = "1.1.0"
edition = "2021"
repository = "https://github.com/tee8z/noaa-data-pipeline"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-compression = { version = "0.4.11", features = ["tokio", "gzip"] }
parquet = "52.1.0"
log = "0.4.18"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
clap = { version = "4.3.23", features = ["derive", "env"] }
reqwest = { version = "0.12.5", features = ["stream", "multipart", "json"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full", "signal"] }
tokio-util = { version = "0.7.10", features = ["codec", "compat"] }
serde_json = "1.0.107"
async-throttle = "0.3.2"
futures = "0.3.28"
arrow = "52.1.0"
parquet_derive = "52.1.0"
time = { version = "0.3.36", features = ["parsing"] }
reqwest-retry = "0.6.0"
reqwest-middleware = "0.3.2"
serde-xml-rs = "0.6.0"
regex = "1.10.2"
openssl = { version = "0.10", features = ["vendored"] }
toml = "0.8.10"
