[package]
name = "parquet_file_service"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["macros", "tracing", "multipart"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.9"
hyper = "0.14.27"
time = { version = "0.3.25", features = ["parsing", "formatting"] }
uuid = { version = "1.4.1", features = ["v4"] }
anyhow = "1.0.72"
mime = "0.3.17"
tower-http = { version= "0.4.4", features = ["fs", "cors"] }
futures = "0.3.28"
serde = { version="1.0.188", features= ["derive"]}

[dev-dependencies]
tower = "0.4.13"
